<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Touch Tanks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Check">Fire</string>
    <string name="Power">Power:</string><string name="Angle">Angle:</string><string name="Health">Health:</string><string name="Player">Player: </string><string name="Fuel">Fuel: </string>
    <string name="nextbutton">Next</string><string name="backbutton">Back</string>

</resources>