<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/InfoBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="top"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/settings_progress_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Fuel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Fuel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100%"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/settings_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="@string/Health"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Health"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100%"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Player"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp"  />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Power"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Power"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="50%"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Angle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Angle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="44"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp" />

            <Button
                android:id="@+id/next_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:text="@string/Check"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/AdjustmentBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="top"
            android:gravity="right"
            android:orientation="horizontal" >

            <ViewSwitcher
                android:id="@+id/viewSwitcher1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7" >

                <LinearLayout
                    android:id="@+id/adjust1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/adjustText"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Touch Where You Would Like To Move"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/adjust2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    
                    <SeekBar
                    android:id="@+id/settings_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                    <TextView
                        android:id="@+id/adjustText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="Adjust Your Power"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="18dp" />
                </LinearLayout>

               

            </ViewSwitcher>

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/backbutton"
                android:textSize="18dp" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nextbutton"
                android:textSize="18dp" />
        </LinearLayout>

        <SurfaceView
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/AdjustmentBar"
            android:layout_alignParentRight="true"
            android:layout_below="@id/InfoBar" >
        </SurfaceView>
    </RelativeLayout>

</LinearLayout>